Vector.h: error: 'auto' not allowed in lambda parameter <https://webkit.org/b/171010> <rdar://problem/31716076>

Reviewed by Saam Barati.

* wtf/Vector.h:
(WTF::removeRepeatedElements): Replace 'auto' with a specific
type, 'T', based on a Vector<> template type.


Canonical link: https://commits.webkit.org/187943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215538 268f45cc-cd09-0410-ab3c-d52691b4dbfc